# realworld-axum-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0002_create_email_verification_tokens.sql  0003_add_email_verified_to_users.sql  0004_create_password_reset_tokens.sql  0005_create_refresh_tokens.sql  001_create_users_table.sql
src/: main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/handlers/: auth.rs
src/models/: mod.rs
src/repositories/: email_verification_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs
src/services/: email_service.rs
